--- a/vueTest/index.html
+++ b/vueTest/index.html
@@ -7,6 +7,10 @@
 		<meta name="apple-touch-fullscreen" content="yes">
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="MobileOptimized" content="320" />
+    <!-- 页面资源不缓存 -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 		<!-- uc强制竖屏 -->
 		<meta name="screen-orientation" content="portrait">
 		<!-- QQ强制竖屏 -->
